in wirking on BAKERY website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                                 day in always can't resist.
                 </p>
             </div>
-            <a href="#" class="menu-link"><p class="menu-link__text">OUR MENU</p></a>
+            <a href="#" class="menu-link"><h6>OUR MENU</h6></a>
         </div>
     </header>
     <main class="container">
@@ -75,7 +75,38 @@
                 </div>
             </div>
         </section>
-        <section class="section-2"></section>
+        <section class="section-2">
+            <div class="container">
+                <div class="block-pancakes">
+                    <img src="img/section_2/img_1.jpg" alt="pancakes">
+                    <div class="block-tasty">
+                        <h3>Tasty pancakes</h3>
+                        <h4>SEASON FAVOURITE</h4>
+                        <div class="block-tasty__description">
+                            <p class="sec-description">
+                                Meacenas nec odlo et ante tincidunt tempus. Donec
+                                vitae sapien ut libero venenatis faucibus. Nullam quis
+                                ante. Etiam sit amet orci eget eros faucibus.
+                            </p>
+                        </div>
+                        <div class="slider">
+                            <button type="button"></button>
+                            <img src="img/section_2/slider_img_1.jpg" alt="">
+                            <img src="img/section_2/slider_img_2.jpg" alt="">
+                            <img src="img/section_2/slider_img_3.jpg" alt="">
+                            <img src="img/section_2/slider_img_4.jpg" alt="">
+                            <img src="img/section_2/slider_img_5.jpg" alt="">
+                            <button type="button"></button>
+                        </div>    
+                    </div>
+                    <div class="ready-in">
+                        <h6 class="gold">READY IN</h6>
+                        <p class="ready-in__num">40</p>
+                        <h6 class="gray">mins</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section-3"></section>
     </main>
     <footer>
