--- a/index.html
+++ b/index.html
@@ -8,38 +8,61 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="head">
-                <img src="img/header/logo.svg" alt="logo of bakery" class="logo_white">
-                <nav class="nav-menu">
-                    <a href="#" class="nav-menu__item"><p class="nav-menu__text">WELCOME</p></a>
-                    <a href="#" class="nav-menu__item"><p class="nav-menu__text">MENU</p></a>
-                    <a href="#" class="nav-menu__item"><p class="nav-menu__text">RESERVATIONS</p></a>
-                    <a href="#" class="nav-menu__item"><p class="nav-menu__text">NEWS</p></a>
-                    <a href="#" class="nav-menu__item"><p class="nav-menu__text">CONTACT</p></a>
-                </nav>
-                <nav class="social-nav-menu">
-                    <a href="#" class="socia-nav-menu__item" title="twitter"></a>
-                    <a href="#" class="socia-nav-menu__item" title="facebook"></a>
-                    <a href="#" class="socia-nav-menu__item" title="instagram"></a>
-                </nav>
-            </div>
+        <div class="header-head">
+            <img class="logo_white" src="img/header/logo_white.svg" alt="logo of bakery">
+            <nav class="nav-menu">
+                <ul class="nav-menu__list">
+                    <li class="nav-menu__item">
+                        <a href="welcome.html" class="nav-menu__link"><h4>WELCOME</h4></a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a href="menu.html" class="nav-menu__link"><h4>MENU</h4></a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a href="reservations.html" class="nav-menu__link"><h4>RESERVATIONS</h4></a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a href="news.html" class="nav-menu__link"><h4>NEWS</h4></a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a href="contact.html" class="nav-menu__link"><h4>CONTACT</h4></a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="ss-nav-menu">
+                <ul class="ss-nav-menu__list">
+                    <li class="ss-nav-menu__item">
+                        <a href="#" class="nav-menu__link"><img src="img/header/twitter.svg" alt="icon_twitter"></a>
+                    </li>
+                    <li class="ss-nav-menu__item">
+                        <a href="#" class="nav-menu__link"><img src="img/header/facebook.svg" alt="icon_facebook"></a>
+                    </li>
+                    <li class="ss-nav-menu__item">
+                        <a href="#" class="nav-menu__link"><img src="img/header/instagram.svg" alt="icon_instagram"></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-body">
             <div class="website-title">
                 <p class="website-title__text">Pastry with love</p>
             </div>
             <div class="decore-line">
-                <img src="img/header/heder_decor_line.svg" alt="" class="decore-line__image">
+                <img src="img/header/decor_line.svg" class="decore-line">
             </div>
             <div class="website-subtitle">
-                <p class="website-subtitle__text">We'are bringing you fresh ingredients every <br>
-                                                day in always can't resist.
+                <p class="website-subtitle__text">
+                    We're bringing you fresh ingredients every
+                    day in ways you can't resist
                 </p>
             </div>
-            <a href="#" class="menu-link"><h6>OUR MENU</h6></a>
+            <a href="#" class="header-body__button">
+                <h4>OUR MENU</h4>
+            </a>
         </div>
     </header>
-    <main class="container">
-        <section class="section-1" >
+    <main>
+        <section class="section-1">
             <div class="container">
                 <div class="block-art">
                     <h3>Arts of cakes</h3>
@@ -91,11 +114,11 @@
                         </div>
                         <div class="slider">
                             <button type="button"></button>
-                            <img src="img/section_2/slider_img_1.jpg" alt="">
-                            <img src="img/section_2/slider_img_2.jpg" alt="">
-                            <img src="img/section_2/slider_img_3.jpg" alt="">
-                            <img src="img/section_2/slider_img_4.jpg" alt="">
-                            <img src="img/section_2/slider_img_5.jpg" alt="">
+                            <img src="img/section_2/slider_img_1.jpg">
+                            <img src="img/section_2/slider_img_2.jpg">
+                            <img src="img/section_2/slider_img_3.jpg">
+                            <img src="img/section_2/slider_img_4.jpg">
+                            <img src="img/section_2/slider_img_5.jpg">
                             <button type="button"></button>
                         </div>    
                     </div>
@@ -107,10 +130,61 @@
                 </div>
             </div>
         </section>
-        <section class="section-3"></section>
+        <section class="section-3">
+            <div class="container">
+                <div class="block-breakfast">
+                    <h3 class="white">Breakfast</h3>
+                    <h4>7AM BREAKFAST?WE'RE OPEN!</h4>
+                    <div class="block-breakfast__menu">
+                        <h5 class="white">Full breakfast</h5>
+                        <div class="block-breakfast__description">
+                            <p class="sec-description">
+                                Duis ut tortor, et risus, vulputate pretium
+                            </p>
+                        </div>
+                        <p class="block-breakfast__prise">$12.49</p>
+                        <img src="img/section_3/img_1.jpg" alt="" srcset="">
+                    </div>
+                    <div class="block-breakfast__menu">
+                        <h5 class="white">Toast & Jam</h5>
+                        <div class="block-breakfast__description">
+                            <p class="sec-description">
+                                Suspendisse, tempus, nterdum
+                            </p>
+                        </div>
+                        <p class="block-breakfast__prise">$4.90</p>
+                        <img src="img/section_3/img_1.jpg" alt="" srcset="">
+                    </div>
+                    <div class="block-breakfast__menu">
+                        <h5 class="white">Muffins</h5>
+                        <div class="block-breakfast__description">
+                            <p class="sec-description">
+                                Fusce eget dui sodales est
+                            </p>
+                        </div>
+                        <p class="block-breakfast__prise">$3.95</p>
+                    </div>
+                </div>
+                <div class="block-morning">
+                    <div class="block-morning__header">
+                        <span class="block-morning__text">EST.</span><span class="block-morning__text">1893</span>
+                    </div>
+                    <img src="img/section_3/img_2.jpg">
+                    <h3>Your morning<br>Escape with Flair</h3>
+                    <div class="block-morning__description">
+                        <p class="sec-description">
+                            Donec vitae sapien ut libero venenatis faucibus.
+                            Nullam quis ante. Etiam sit amet orci eget eros
+                            faucibus tincidunt. Duis ieo.
+                        </p>
+                    </div>
+                    <a href="#" class="block-morning__link"><span class="block-morning__link-text">READ</span></a>   
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <h3>The jibarito sandwich</h3>
     </footer>
 </body>
 </html>
