in working on Bakery website

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="header-body">
+        <div class="website-present">
             <div class="website-title">
                 <p class="website-title__text">Pastry with love</p>
             </div>
@@ -56,9 +56,7 @@
                     day in ways you can't resist
                 </p>
             </div>
-            <a href="#" class="header-body__button">
-                <h4>OUR MENU</h4>
-            </a>
+            <a href="#" class="website-present__button"><h4>OUR MENU</h4></a>
         </div>
     </header>
     <main>
