--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="header__wrapp">
+        <div class="wrapp">
             <img class="logo_white" src="img/header/logo_white.png" width="140px" height="44px">
             <nav class="nav-menu">
                 <ul class="nav-menu__list">
@@ -47,65 +47,72 @@
     </header>
     <main>
         <section class="section-1">
-            <div class="section-1__wrapp">
+            <div class="wrapp one-colomn">
                 <div class="website-title">
                     <p class="website-title__text">Pastry with love</p>
                 </div>
                 <div class="decore-line">
-                    <img src="img/section_1/decor_line.svg" class="decore-line">
+                    <img src="img/section_1/dashed_line.svg" class="decore-line">
                 </div>
                 <div class="website-subtitle">
                     <p class="website-subtitle__text">
-                        We're bringing you fresh ingredients every
-                        day in ways you can't resist
+                        We're bringing you fresh ingredients every<br>
+                        day in ways you can't resist.
                     </p>
                 </div>
                 <a href="#" class="website-present__button"><h4>OUR MENU</h4></a>
             </div>
             <div class="decor-circle">
-                <img class="decor-circle__item" src="img/section_1/circle_1.svg">
-                <img class="decor-circle__item" src="img/section_1/circle_2.svg">
+                <div class="decor-circle__circle"></div>
+                <img class="decor-circle__item" src="img/section_1/decor_circle_1.png" >
             </div>
         </section>
 
         <section class="section-2">
-            <div class="container">
+            <div class="wrapp">
                 <div class="block-art">
-                    <h3>Arts of cakes</h3>
-                    <h4>WE CREAT DELICIOUS MEMORIES</h4>
+                    <div class="block-art__title"><h3>Art of cakes</h3></div>
+                    <div class="block-art__subtitle"><h4 class="gold">WE CREATE DELICIOUS MEMORIES</h4></div>
                     <div class="block-art__description">
                         <p class="sec-description">
-                            Quisque retrum. Aenean imperdiet. Etiam ultricies nisi vel auque.
+                            Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel auque.
                             Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
                             Maecenas tempus, tellus eget condimentum rhoncus, sem quam
                             semper libero, sit amet adipiscing sem neque sed.
                         </p>
                     </div>
+                    <div class="block-chef__title"><h5>Chef Cook</h5></div>
                     <div class="block-chef">
-                        <h5>Chef Cook</h5>
                         <div class="block-chef__main">
-                            <p class="block-chef__name">Benito</p>
-                            <img src="img/section_1/cook_foto.jpg" alt="foto of cook">
-                            <p class="block-chef__name">Gaspare</p>
+                            <div class="block-chef__name"><h5 class="normal">Benito</h5></div>
+                            <img src="img/section_2/chef_cook.jpg" alt="foto of cook">
+                            <div class="block-chef__name"><h5 class="normal">Gaspare</h5></div>
                         </div>
-                        <div class="block-chef__footer">
-                            <p class="block-chef__frase">Unique creations for unique occasions.</p>
-                        </div>
+                        <img class="block-chef__img" src="img/section_2/unique.png">
                     </div>
                 </div>
                 <div class="block-tastes">
-                    <img src="img/section_1/img_1.jpg">
-                    <img src="img/section_1/img_2.jpg">
-                    <img src="img/section_1/img_3.jpg">
-                    <img src="img/section_1/img_4.jpg">
-                    <div class="block-tastes-title">     
-                        <p class="block-tastes-title__text">TASTES SO GOOD</p>
-                    </div> 
+                    <ul class="block-tastes__list">
+                        <li class="block-tastes__item">
+                            <img class="block-tastes__img" src="img/section_2/img_1.jpg">
+                        </li>
+                        <li class="block-tastes__item">
+                            <img class="block-tastes__img" src="img/section_2/img_2.jpg">
+                        </li>
+                        <li class="block-tastes__item">
+                            <img class="block-tastes__img" src="img/section_2/img_3.jpg">
+                        </li>
+                        <li class="block-tastes__item">
+                            <img class="block-tastes__img" src="img/section_2/img_4.jpg">
+                        </li>
+                    </ul>
+                    <div class="block-tastes-title"></div>
+                    <p class="block-tastes-title__text">TASTES SO<br>GOOD!</p>
                 </div>
             </div>
         </section>
         <section class="section-3">
-            <div class="container">
+            <div class="wrapp">
                 <div class="block-pancakes">
                     <img src="img/section_2/img_1.jpg" alt="pancakes">
                     <div class="block-tasty">
@@ -137,7 +144,7 @@
             </div>
         </section>
         <section class="section-4">
-            <div class="container">
+            <div class="wrapp">
                 <div class="block-breakfast">
                     <h3 class="white">Breakfast</h3>
                     <h4>7AM BREAKFAST?WE'RE OPEN!</h4>
