happy new year!!!

--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
                 </div>
             </div>
         </section>
+
         <section class="section-3">
             <div class="wrapp">
-                <div class="block-pancakes">
-                    <img src="img/section_2/img_1.jpg" alt="pancakes">
-                    <div class="block-tasty">
-                        <h3>Tasty pancakes</h3>
-                        <h4>SEASON FAVOURITE</h4>
+                <div class="block-tasty">
+                    <div class="block-tasty__stars"></div>
+                    <div class="block-tasty__content">
+                        <div class="block-tasty__title"><h3>Tasty pancakes</h3></div>
+                        <div class="block-tasty__subtitle"><h4 class="gold">SEASON FAVOURITE</h4></div>
                         <div class="block-tasty__description">
                             <p class="sec-description">
                                 Meacenas nec odlo et ante tincidunt tempus. Donec
@@ -126,56 +127,58 @@
                             </p>
                         </div>
                         <div class="slider">
-                            <button type="button"></button>
-                            <img src="img/section_2/slider_img_1.jpg">
-                            <img src="img/section_2/slider_img_2.jpg">
-                            <img src="img/section_2/slider_img_3.jpg">
-                            <img src="img/section_2/slider_img_4.jpg">
-                            <img src="img/section_2/slider_img_5.jpg">
-                            <button type="button"></button>
-                        </div>    
-                    </div>
-                    <div class="ready-in">
-                        <h6 class="gold">READY IN</h6>
-                        <p class="ready-in__num">40</p>
-                        <h6 class="gray">mins</h6>
+                            <button class="slider__button_left"></button>
+                            <img src="img/section_3/ellipse_1.png">
+                            <img src="img/section_3/ellipse_2.png">
+                            <img src="img/section_3/ellipse_3.png">
+                            <button class="slider__button_right"></button>
+                        </div>
+                        <div class="block-tasty__circle"></div>
+                    </div>    
+                    <div class="block-ready">
+                        <div class="block-ready_title"><h6 class="gold">READY IN</h6></div>
+                        <p class="block-ready__num golg">40</p>
+                        <div class="block-ready_subtitle"><h6 class="gray">mins</h6></div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="section-4">
             <div class="wrapp">
                 <div class="block-breakfast">
-                    <h3 class="white">Breakfast</h3>
-                    <h4>7AM BREAKFAST?WE'RE OPEN!</h4>
+                    <div class="block-breakfast__title"><h3 class="white">Breakfast</h3></div>
+                    <div class="block-breakfast__subtitle"><h4>7AM BREAKFAST?WE'RE OPEN!</h4></div>
                     <div class="block-breakfast__menu">
-                        <h5 class="white">Full breakfast</h5>
-                        <div class="block-breakfast__description">
-                            <p class="sec-description">
-                                Duis ut tortor, et risus, vulputate pretium
-                            </p>
-                        </div>
-                        <p class="block-breakfast__prise">$12.49</p>
-                        <img src="img/section_3/img_1.jpg" alt="" srcset="">
-                    </div>
-                    <div class="block-breakfast__menu">
-                        <h5 class="white">Toast & Jam</h5>
-                        <div class="block-breakfast__description">
-                            <p class="sec-description">
-                                Suspendisse, tempus, nterdum
-                            </p>
-                        </div>
-                        <p class="block-breakfast__prise">$4.90</p>
-                        <img src="img/section_3/img_1.jpg" alt="" srcset="">
-                    </div>
-                    <div class="block-breakfast__menu">
-                        <h5 class="white">Muffins</h5>
-                        <div class="block-breakfast__description">
-                            <p class="sec-description">
-                                Fusce eget dui sodales est
-                            </p>
-                        </div>
-                        <p class="block-breakfast__prise">$3.95</p>
+                        <ul class="block-breakfast__list">
+                            <li class="block-breakfast__item">
+                                <div class="block-breakfast__item-title"><h5 class="white">Full breakfast</h5></div>
+                                <div class="block-breakfast__item-description">
+                                    <p class="sec-description">
+                                        Duis ut tortor, et risus, vulputate pretium
+                                    </p>
+                                    <p class="block-breakfast__item-prise">$12.49</p>
+                                </div>
+                            </li>
+                            <li class="block-breakfast__item">
+                                <div class="block-breakfast__item-title"><h5 class="white">Toast & Jam</h5></div>
+                                <div class="block-breakfast__item-description">
+                                    <p class="sec-description">
+                                        Suspendisse, tempus, nterdum
+                                    </p>
+                                    <p class="block-breakfast__item-prise">$4.90</p>
+                                </div>
+                            </li>
+                            <li class="block-breakfast__item">
+                                <div class="block-breakfast__item-title"><h5 class="white">Muffins</h5></div>
+                                <div class="block-breakfast__item-description">
+                                    <p class="sec-description">
+                                        Fusce eget dui sodales est
+                                    </p>
+                                    <p class="block-breakfast__item-prise">$3.95</p>
+                                </div>
+                            </li>
+                        </ul>   
                     </div>
                 </div>
                 <div class="block-morning">
