in working on bakery website

--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
                         </div>
                         <div class="slider">
                             <button class="slider__button_left"></button>
-                            <img src="img/section_3/ellipse_1.png">
-                            <img src="img/section_3/ellipse_2.png">
-                            <img src="img/section_3/ellipse_3.png">
+                                <div class="slider__wrapp">
+                                    <img src="img/section_3/ellipse_1.png">
+                                    <img src="img/section_3/ellipse_2.png">
+                                    <img src="img/section_3/ellipse_3.png">
+                                </div>
                             <button class="slider__button_right"></button>
                         </div>
                         <div class="block-tasty__circle"></div>
@@ -145,56 +147,63 @@
         </section>
 
         <section class="section-4">
-            <div class="wrapp">
+            <div class="section-4__wrapp">
                 <div class="block-breakfast">
-                    <div class="block-breakfast__title"><h3 class="white">Breakfast</h3></div>
-                    <div class="block-breakfast__subtitle"><h4>7AM BREAKFAST?WE'RE OPEN!</h4></div>
+                    <div class="block-breakfast__title">Breakfast</div>
+                    <div class="block-breakfast__subtitle">7AM BREAKFAST? WE'RE OPEN!</div>
                     <div class="block-breakfast__menu">
                         <ul class="block-breakfast__list">
                             <li class="block-breakfast__item">
-                                <div class="block-breakfast__item-title"><h5 class="white">Full breakfast</h5></div>
+                                <div class="block-breakfast__item-title">Full breakfast</div>
                                 <div class="block-breakfast__item-description">
-                                    <p class="sec-description">
+                                    <p>
                                         Duis ut tortor, et risus, vulputate pretium
                                     </p>
                                     <p class="block-breakfast__item-prise">$12.49</p>
                                 </div>
                             </li>
                             <li class="block-breakfast__item">
-                                <div class="block-breakfast__item-title"><h5 class="white">Toast & Jam</h5></div>
+                                <div class="block-breakfast__item-title position">Toast & Jam</div>
                                 <div class="block-breakfast__item-description">
-                                    <p class="sec-description">
+                                    <p>
                                         Suspendisse, tempus, nterdum
                                     </p>
-                                    <p class="block-breakfast__item-prise">$4.90</p>
+                                    <p class="block-breakfast__item-prise position-1">$4.90</p>
                                 </div>
                             </li>
                             <li class="block-breakfast__item">
-                                <div class="block-breakfast__item-title"><h5 class="white">Muffins</h5></div>
+                                <div class="block-breakfast__item-title position-2">Muffins</div>
                                 <div class="block-breakfast__item-description">
-                                    <p class="sec-description">
+                                    <p>
                                         Fusce eget dui sodales est
                                     </p>
-                                    <p class="block-breakfast__item-prise">$3.95</p>
+                                    <p class="block-breakfast__item-prise position-3">$3.95</p>
                                 </div>
                             </li>
                         </ul>   
                     </div>
                 </div>
                 <div class="block-morning">
-                    <div class="block-morning__header">
-                        <span class="block-morning__text">EST.</span><span class="block-morning__text">1893</span>
-                    </div>
-                    <img src="img/section_3/img_2.jpg">
-                    <h3>Your morning<br>Escape with Flair</h3>
+                    <div class="block-morning__title"><h3 class="line">Your morning<br>Escape with Flair</h3></div>
                     <div class="block-morning__description">
-                        <p class="sec-description">
+                        <p>
                             Donec vitae sapien ut libero venenatis faucibus.
                             Nullam quis ante. Etiam sit amet orci eget eros
                             faucibus tincidunt. Duis ieo.
                         </p>
                     </div>
-                    <a href="#" class="block-morning__link"><span class="block-morning__link-text">READ</span></a>   
+                    <a href="#" class="block-morning__link"><h6 class="gold">READ</h6></a> 
+                    <div class="block-morning__angle"></div>  
+                </div>
+                <div class="block-morning__background"></div>
+                <div class="block-morning__background-1"></div>
+            </div>
+        </section>
+        
+        <section class="section-5">
+            <div class="section-5__wrap">
+                <div class="block-food">
+
                 </div>
             </div>
         </section>
