in working on bakery website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>BAKERY</title>
 </head>
+
 <body>
     <header>
         <div class="wrapp">
@@ -14,19 +16,29 @@
             <nav class="nav-menu">
                 <ul class="nav-menu__list">
                     <li class="nav-menu__item">
-                        <a href="welcome.html" class="nav-menu__link"><h4>WELCOME</h4></a>
+                        <a href="welcome.html" class="nav-menu__link">
+                            <h4>WELCOME</h4>
+                        </a>
                     </li>
                     <li class="nav-menu__item">
-                        <a href="menu.html" class="nav-menu__link"><h4>MENU</h4></a>
+                        <a href="menu.html" class="nav-menu__link">
+                            <h4>MENU</h4>
+                        </a>
                     </li>
                     <li class="nav-menu__item">
-                        <a href="reservations.html" class="nav-menu__link"><h4>RESERVATIONS</h4></a>
+                        <a href="reservations.html" class="nav-menu__link">
+                            <h4>RESERVATIONS</h4>
+                        </a>
                     </li>
                     <li class="nav-menu__item">
-                        <a href="news.html" class="nav-menu__link"><h4>NEWS</h4></a>
+                        <a href="news.html" class="nav-menu__link">
+                            <h4>NEWS</h4>
+                        </a>
                     </li>
                     <li class="nav-menu__item">
-                        <a href="contact.html" class="nav-menu__link"><h4>CONTACT</h4></a>
+                        <a href="contact.html" class="nav-menu__link">
+                            <h4>CONTACT</h4>
+                        </a>
                     </li>
                 </ul>
             </nav>
@@ -36,10 +48,12 @@
                         <a href="#" class="ss-nav-menu__link"><img src="img/header/twitter.svg" alt="icon_twitter"></a>
                     </li>
                     <li class="ss-nav-menu__item">
-                        <a href="#" class="ss-nav-menu__link"><img src="img/header/facebook.svg" alt="icon_facebook"></a>
+                        <a href="#" class="ss-nav-menu__link"><img src="img/header/facebook.svg"
+                                alt="icon_facebook"></a>
                     </li>
                     <li class="ss-nav-menu__item">
-                        <a href="#" class="ss-nav-menu__link"><img src="img/header/instagram.svg" alt="icon_instagram"></a>
+                        <a href="#" class="ss-nav-menu__link"><img src="img/header/instagram.svg"
+                                alt="icon_instagram"></a>
                     </li>
                 </ul>
             </nav>
@@ -60,19 +74,25 @@
                         day in ways you can't resist.
                     </p>
                 </div>
-                <a href="#" class="website-present__button"><h4>OUR MENU</h4></a>
+                <a href="#" class="website-present__button">
+                    <h4>OUR MENU</h4>
+                </a>
             </div>
             <div class="decor-circle">
                 <div class="decor-circle__circle"></div>
-                <img class="decor-circle__item" src="img/section_1/decor_circle_1.png" >
+                <img class="decor-circle__item" src="img/section_1/decor_circle_1.png">
             </div>
         </section>
 
         <section class="section-2">
             <div class="wrapp">
                 <div class="block-art">
-                    <div class="block-art__title"><h3>Art of cakes</h3></div>
-                    <div class="block-art__subtitle"><h4 class="gold">WE CREATE DELICIOUS MEMORIES</h4></div>
+                    <div class="block-art__title">
+                        <h3>Art of cakes</h3>
+                    </div>
+                    <div class="block-art__subtitle">
+                        <h4 class="gold">WE CREATE DELICIOUS MEMORIES</h4>
+                    </div>
                     <div class="block-art__description">
                         <p class="sec-description">
                             Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel auque.
@@ -81,12 +101,18 @@
                             semper libero, sit amet adipiscing sem neque sed.
                         </p>
                     </div>
-                    <div class="block-chef__title"><h5>Chef Cook</h5></div>
+                    <div class="block-chef__title">
+                        <h5>Chef Cook</h5>
+                    </div>
                     <div class="block-chef">
                         <div class="block-chef__main">
-                            <div class="block-chef__name"><h5 class="normal">Benito</h5></div>
+                            <div class="block-chef__name">
+                                <h5 class="normal">Benito</h5>
+                            </div>
                             <img src="img/section_2/chef_cook.jpg" alt="foto of cook">
-                            <div class="block-chef__name"><h5 class="normal">Gaspare</h5></div>
+                            <div class="block-chef__name">
+                                <h5 class="normal">Gaspare</h5>
+                            </div>
                         </div>
                         <img class="block-chef__img" src="img/section_2/unique.png">
                     </div>
@@ -117,8 +143,12 @@
                 <div class="block-tasty">
                     <div class="block-tasty__stars"></div>
                     <div class="block-tasty__content">
-                        <div class="block-tasty__title"><h3>Tasty pancakes</h3></div>
-                        <div class="block-tasty__subtitle"><h4 class="gold">SEASON FAVOURITE</h4></div>
+                        <div class="block-tasty__title">
+                            <h3>Tasty pancakes</h3>
+                        </div>
+                        <div class="block-tasty__subtitle">
+                            <h4 class="gold">SEASON FAVOURITE</h4>
+                        </div>
                         <div class="block-tasty__description">
                             <p class="sec-description">
                                 Meacenas nec odlo et ante tincidunt tempus. Donec
@@ -128,19 +158,23 @@
                         </div>
                         <div class="slider">
                             <button class="slider__button_left"></button>
-                                <div class="slider__wrapp">
-                                    <img src="img/section_3/ellipse_1.png">
-                                    <img src="img/section_3/ellipse_2.png">
-                                    <img src="img/section_3/ellipse_3.png">
-                                </div>
+                            <div class="slider__wrapp">
+                                <img src="img/section_3/ellipse_1.png">
+                                <img src="img/section_3/ellipse_2.png">
+                                <img src="img/section_3/ellipse_3.png">
+                            </div>
                             <button class="slider__button_right"></button>
                         </div>
                         <div class="block-tasty__circle"></div>
-                    </div>    
+                    </div>
                     <div class="block-ready">
-                        <div class="block-ready_title"><h6 class="gold">READY IN</h6></div>
+                        <div class="block-ready__title">
+                            <h6 class="gold">READY IN</h6>
+                        </div>
                         <p class="block-ready__num golg">40</p>
-                        <div class="block-ready_subtitle"><h6 class="gray">mins</h6></div>
+                        <div class="block-ready__subtitle">
+                            <h6 class="gray">mins</h6>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -180,11 +214,13 @@
                                     <p class="block-breakfast__item-prise position-3">$3.95</p>
                                 </div>
                             </li>
-                        </ul>   
+                        </ul>
                     </div>
                 </div>
                 <div class="block-morning">
-                    <div class="block-morning__title"><h3 class="line">Your morning<br>Escape with Flair</h3></div>
+                    <div class="block-morning__title">
+                        <h3 class="line">Your morning<br>Escape with Flair</h3>
+                    </div>
                     <div class="block-morning__description">
                         <p>
                             Donec vitae sapien ut libero venenatis faucibus.
@@ -192,24 +228,97 @@
                             faucibus tincidunt. Duis ieo.
                         </p>
                     </div>
-                    <a href="#" class="block-morning__link"><h6 class="gold">READ</h6></a> 
-                    <div class="block-morning__angle"></div>  
+
+                    <a href="#" class="block-morning__link">
+                        <h6 class="gold">READ</h6>
+                    </a>
+                    <div class="block-morning__angle"></div>
                 </div>
                 <div class="block-morning__background"></div>
                 <div class="block-morning__background-1"></div>
+            
             </div>
+            <div class="block-morning__background-2"></div>
         </section>
-        
+
         <section class="section-5">
+            <div class="section-5__title">
+                <h3>The Jibarito sandwich</h3>
+            </div>
+            <div class="section-5__subtitle">
+                <h4 class="gold">THE BEST SANDWICH YOU'VE EVER TASTED!</h4>
+            </div>
             <div class="section-5__wrap">
                 <div class="block-food">
-
+                    <ul class="block-food__list">
+                        <li class="block-food__item">
+                            <img src="img/section_5/Class_aptent.png">
+                            <p class="block-food__item-header">Class aptent</p>
+                            <pre class="block-food__item-description">
+Quot alienum percecuti ut eam, nam ad
+atquil primis nusquam
+                            </pre>
+                        </li>
+                        <li class="block-food__item">
+                            <img src="img/section_5/Nulla_eget.png">
+                            <p class="block-food__item-header">Nulla eget</p>
+                            <pre class="block-food__item-description">
+Nullam dictum fells eu pede mollis
+pretium integer tincidunt.
+                            </pre>
+                        </li>
+                        <li class="block-food__item">
+                            <img src="img/section_5/Sed_nubh_purus.png">
+                            <p class="block-food__item-header">Sed nibh purus</p>
+                            <pre class="block-food__item-description">
+Aenean eleifend tellus leo ligula,
+porttitor eu, consequat vitae
+                            </pre>
+                        </li>
+                    </ul>
+                </div>
+                <div class="block-sandwich">
+                    <img src="img/section_5/img_1.jpg">
+                    <div class="block-sandwich__aside">
+                        <ul class="block-sandwich__list">
+                            <li class="block-sandwich__item">
+                                <div class="block-sandwich__title">
+                                    <h6 class="gold">PREP</h6>
+                                </div>
+                                <p class="block-sandwich__num">15</p>
+                                <div class="block-sandwich__subtitle">
+                                    <h6 class="gray">mins</h6>
+                                </div>
+                            </li>
+                            <li class="block-sandwich__item">
+                                <div class="block-sandwich__title">
+                                    <h6 class="gold">COOK</h6>
+                                </div>
+                                <p class="block-sandwich__num">35</p>
+                                <div class="block-sandwich__subtitle">
+                                    <h6 class="gray">mins</h6>
+                                </div>
+                            </li>
+                            <li class="block-sandwich__item">
+                                <div class="block-sandwich__title">
+                                    <h6 class="gold">READY IN</h6>
+                                </div>
+                                <p class="block-sandwich__num-1">50</p>
+                                <div class="block-sandwich__subtitle">
+                                    <h6 class="gray">mins</h6>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="block-sandwich__link">
+                        <h6 class="gold-1">FULL RECIPE</h6>
+                    </a>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <h3>The jibarito sandwich</h3>
     </footer>
 </body>
+
 </html>
