in working on bakery website

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </div>
                         <p class="block-ready__num golg">40</p>
                         <div class="block-ready__subtitle">
-                            <h6 class="gray">mins</h6>
+                            <h6 class="gray-1">mins</h6>
                         </div>
                     </div>
                 </div>
@@ -287,7 +287,7 @@ porttitor eu, consequat vitae
                                 </div>
                                 <p class="block-sandwich__num">15</p>
                                 <div class="block-sandwich__subtitle">
-                                    <h6 class="gray">mins</h6>
+                                    <h6 class="gray-1">mins</h6>
                                 </div>
                             </li>
                             <li class="block-sandwich__item">
@@ -296,7 +296,7 @@ porttitor eu, consequat vitae
                                 </div>
                                 <p class="block-sandwich__num">35</p>
                                 <div class="block-sandwich__subtitle">
-                                    <h6 class="gray">mins</h6>
+                                    <h6 class="gray-1">mins</h6>
                                 </div>
                             </li>
                             <li class="block-sandwich__item">
@@ -305,7 +305,7 @@ porttitor eu, consequat vitae
                                 </div>
                                 <p class="block-sandwich__num-1">50</p>
                                 <div class="block-sandwich__subtitle">
-                                    <h6 class="gray">mins</h6>
+                                    <h6 class="gray-1">mins</h6>
                                 </div>
                             </li>
                         </ul>
@@ -318,6 +318,47 @@ porttitor eu, consequat vitae
         </section>
     </main>
     <footer>
+        <div class="footer-wrapp">
+            <nav class="footer-nav-menu">
+                <ul class="footer-nav-menu__list">
+                    <li class="footer-nav-menu__item">
+                        <a href="#" class="footer-nav-menu__link">
+                            <h4 class="gray-1">OUR MENU</h4>
+                        </a>
+                    </li>
+                    <li class="footer-nav-menu__item">
+                        <a href="#" class="footer-nav-menu__link">
+                            <h4 class="gray-1">GALLERY</h4>
+                        </a>
+                    </li>
+                    <li class="footer-nav-menu__item">
+                        <a href="#" class="footer-nav-menu__link">
+                            <h4 class="gray-1">CULTURE</h4>
+                        </a>
+                    </li>
+                    <!-- logotip -->
+                    <li class="footer-nav-menu__item-1">
+                        <img class="footer-logo" src="img/footer/logo_gray.png" alt="">
+                    </li>
+                    <!-- logotip -->
+                    <li class="footer-nav-menu__item">
+                        <a href="#" class="footer-nav-menu__link">
+                            <h4 class="gray-1">EVENTS</h4>
+                        </a>
+                    </li>
+                    <li class="footer-nav-menu__item">
+                        <a href="#" class="footer-nav-menu__link">
+                            <h4 class="gray-1">CATERING</h4>
+                        </a>
+                    </li>
+                    <li class="footer-nav-menu__item">
+                        <a href="#" class="footer-nav-menu__link">
+                            <h4 class="gray-1">VISIT US</h4>
+                        </a>
+                    </li> 
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 
