in working on bakery website

--- a/index.html
+++ b/index.html
@@ -335,24 +335,24 @@ porttitor eu, consequat vitae
                         <a href="#" class="footer-nav-menu__link">
                             <h4 class="gray-1">CULTURE</h4>
                         </a>
-                    </li>
-                    <!-- logotip -->
-                    <li class="footer-nav-menu__item-1">
-                        <img class="footer-logo" src="img/footer/logo_gray.png" alt="">
-                    </li>
-                    <!-- logotip -->
-                    <li class="footer-nav-menu__item">
-                        <a href="#" class="footer-nav-menu__link">
+                    </li>   
+                </ul>
+                <!-- logotip -->
+                <img class="footer-logo" width="140" height="44" src="img/footer/logo_gray.png" alt="">
+                <!-- logotip -->
+                <ul class="footer-nav-menu-1__list">
+                    <li class="footer-nav-menu-1__item">
+                        <a href="#" class="footer-nav-menu-1__link">
                             <h4 class="gray-1">EVENTS</h4>
                         </a>
                     </li>
-                    <li class="footer-nav-menu__item">
-                        <a href="#" class="footer-nav-menu__link">
+                    <li class="footer-nav-menu-1__item">
+                        <a href="#" class="footer-nav-menu-1__link">
                             <h4 class="gray-1">CATERING</h4>
                         </a>
                     </li>
-                    <li class="footer-nav-menu__item">
-                        <a href="#" class="footer-nav-menu__link">
+                    <li class="footer-nav-menu-1__item">
+                        <a href="#" class="footer-nav-menu-1__link">
                             <h4 class="gray-1">VISIT US</h4>
                         </a>
                     </li> 
